# neuromarketer

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  Makefile  Makefile.deploy  Makefile.local  Procfile.dev  README.md  TECHNICAL_MARKET_READINESS_PLAN.md  business_model.txt  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  scoring.txt  todo.txt
.codex/: config.toml  gsd-file-manifest.json
backend/: .env.example  Dockerfile  PERFORMANCE_NOTES.md  celery_app.py  requirement.txt  run_workers.sh  tasks.py
backend/alembic/: env.py
backend/api/: dependencies.py  errors.py  main.py  middleware.py  rate_limit.py
backend/core/: config.py  exceptions.py  log_context.py  logging.py  metrics.py  mime_types.py  security.py  telemetry.py
backend/db/: models.py  session.py
backend/llm/: analysis_scoring_service.py  context_builder.py  evaluation_service.py  llm_client.py  router.py
backend/middleware/: __init__.py  request_context.py
backend/schemas/: __init__.py  account.py  analysis.py  base.py  collaboration.py  common.py  evaluators.py  llm_scoring.py  schemas.py  settings.py  uploads.py
backend/services/: analysis_goal_taxonomy.py  analysis_job_events.py  analysis_postprocessor.py  asset_loader.py  document_text_extractor.py  env_settings_registry.py  file_validation.py  preprocess.py  scoring.py  storage.py  text_preprocess.py  tribe_inference_service.py  tribe_runtime.py  video_preprocess.py
backend/tests/: test_analysis_comparisons_extract_scores.py  test_analysis_evaluation_application_service.py  test_analysis_partial_results.py  test_analysis_pipeline_state.py  test_analysis_postprocessor.py  test_analysis_service.py  test_api_hardening.py  test_celery_worker_preload.py  test_comparison.py  (+31 more)
frontend/: .gitignore  PERFORMANCE_NOTES.md  package-lock.json  package.json  vite.config.ts
scripts/: dev-redis.sh  inspect_analysis_comparison_inputs.py
(+289 files in other folders)
